hard-gists/a14e56ab945cd7e64c3b/run.log
=== Docker Run Log for a14e56ab945cd7e64c3b ===
Started at: Mi 29. Okt 18:50:52 CET 2025

[2025-10-29 18:50:53] START: Running container for a14e56ab945cd7e64c3b
[2025-10-29 18:50:53] SUCCESS: Container 5e0a7bd5cfea32465886cd24dae8c5b6bdba6feb4b6cf063d31b63bba184f923 started for a14e56ab945cd7e64c3b
=== Container logs for a14e56ab945cd7e64c3b ===
  File "/snippet.py", line 35
    print x, y
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a14e56ab945cd7e64c3b ===
[2025-10-29 18:50:55] INFO: Container 5e0a7bd5cfea32465886cd24dae8c5b6bdba6feb4b6cf063d31b63bba184f923 has stopped
